[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
console = "0.15.2"
enum-iterator = "1.2.0"
euclid = { version = "0.22.7", features = ["serde"] }
internment = "0.7.0"
itertools = "0.10.5"
nom = "7.1.1"
once_cell = "1.16.0"
pathfinding = "4.0.0"
petgraph = "0.6.2"
ranges = "0.3.3"
rayon = "1.6.1"
regex = "1.7.0"
structopt = "0.3.26"
